--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
     <style>
         body{
-            background-color: #d42626;
+            background-color: #C10837;
             color: #fff;
         }
 
@@ -49,7 +49,7 @@
         .button{
             margin-top: 30px;
             color: white;
-            background: #460c0c;
+            background: #4d0315;
             border: none;
             padding: 10px;
             width: 200px;
