--- a/form.html
+++ b/form.html
@@ -125,7 +125,7 @@
         <h1>athome求人</h1>
         <div class="nav">
             <p><a href="login.html">管理者ページ</a></p>
-            <p><a href="user.html">トップページ</a></p>
+            <p><a href="user.php">トップページ</a></p>
         </div>
     </header>
 
