--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
         h1{
             text-align: center;
-            font-family: Impact;
+            /* font-family: Impact; */
             font-size: 4rem;
             line-height: 0.4;
         }
@@ -48,11 +48,19 @@
 
         .button{
             margin-top: 30px;
-            color: white;
-            background: #4d0315;
-            border: none;
+            color: #C10837;
+            background: #ffffff;
+            border: 3px solid #fff;
             padding: 10px;
             width: 200px;
+            font-weight: bold;
+        }
+
+        .button:hover{
+            color: #fff;
+            border: 3px solid #fff;
+            background-color: #C10837;
+            transition: 0.3s;
         }
     </style>    
     <title>Login</title>
