--- a/user.html
+++ b/user.html
@@ -8,6 +8,10 @@
     <title>athome求人</title>
 
     <style>
+        body{
+            position: relative;
+        }
+
         header{
             background-color: #C10837;
             display: flex;
@@ -64,6 +68,38 @@
             right: 0;
             left: 0;
             margin: 0 auto;
+            position: relative;
+        }
+
+        .chara1 img{
+            position: absolute;
+            width: 120px;
+            top: 230px;
+            right: 90px;
+        }
+
+        .chara3 img{
+            position: absolute;
+            width: 150px;
+            top: 350px;
+            left: 10px;
+        }
+
+        .chara4 img{
+            position: absolute;
+            width: 160px;
+            bottom: 79px;
+            right: 0;
+            left: 0;
+            margin: 0 auto;
+        }
+
+        .chara5 img{
+            position: absolute;
+            width: 170px;
+            top: 11px;
+            left: 110px;
+            rotate: 4deg;
         }
 
         .inner h2{
@@ -150,9 +186,16 @@
         </div>
     </header>
 
+    <p class="chara5"><img src="img/chara5.png"></p>
+
     <main>
         <div class="inner">
             <h2>athome求人にようこそ！さっそくお仕事を探してみよう！</h2>
+
+            <p class="chara1"><img src="img/chara1.png"></p>
+            <p class="chara3"><img src="img/chara3.png"></p>
+            <p class="chara4"><img src="img/chara4.png"></p>
+            
 
             <div class="search1">
                 <form action="user.php" method="get">
